Added Translation for Campus

--- a/src/locales/english_translation.json
+++ b/src/locales/english_translation.json
@@ -1,6 +1,7 @@
 {
     "home": "Home",
     "search": "Search",
+    "campus": "Campus",
 
     "selectCampus": "Select Campus",
     "SanFrancisco": "San Francisco",
