--- a/src/locales/english_translation.json
+++ b/src/locales/english_translation.json
@@ -8,6 +8,7 @@
     "SanBartolome": "San Bartolome",
     "Batasan": "Batasan",
 
-    "SelectLanguage": "Select Language:"
+    "SelectLanguage": "Select Language:",
+    "You are here": "You are here"
 
 }
