--- a/src/locales/korea_translation.json
+++ b/src/locales/korea_translation.json
@@ -9,7 +9,8 @@
     "SanBartolome": "성 바르톨로메오",
     "Batasan": "법",
 
-    "SelectLanguage": "언어 선택:"
+    "SelectLanguage": "언어 선택:",
+    "You are here": "당신은 여기 있습니다"
 
 }
 
